# UnrealMedia

./: .gitattributes  .gitignore  LICENSE  README.md  build-ffmpeg.sh  configure_help.txt
UnrealMedia/app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
UnrealMedia/app/src/androidTest/java/com/qfleng/um/: ExampleInstrumentedTest.java
UnrealMedia/app/src/main/: AndroidManifest.xml
UnrealMedia/app/src/main/cpp/: LogUtil.h  NativeAudioPlayer.cpp  NativeAudioPlayer.h  NativeMedia.cpp  NativeMedia.h  PlayCallBack.h  SLAudioPlayer.cpp  SLAudioPlayer.h  Util.cpp  Util.h
UnrealMedia/app/src/main/java/com/qfleng/um/: AboutActivity.kt  ArtistDetailActivity.kt  BaseActivity.kt  FFmpeg.kt  MainActivity.kt  MusicService.kt  PermissionsManager.kt  PluginsInfoActivity.kt  SettingActivity.kt  UmApp.kt
UnrealMedia/app/src/main/java/com/qfleng/um/adapter/: ArtistGridAdapter.kt  ArtistMediaListAdapter.kt  MainMediaListAdapter.kt  PopupMenuHelper.kt
UnrealMedia/app/src/main/java/com/qfleng/um/audio/: AudioPlayManager.kt  AudioPlayerActivity.kt  FFAudioPlayer.kt  LrcInfo.kt  LrcParse.kt  LrcRow.kt  MediaInfoActivity.kt  MusicUtils.kt  PlayNotificationHelper.kt
UnrealMedia/app/src/main/java/com/qfleng/um/audio/lrc/: KuGouLrc.kt
UnrealMedia/app/src/main/java/com/qfleng/um/audio/view/: ILrcView.kt  LrcView.kt
UnrealMedia/app/src/main/java/com/qfleng/um/bean/: ArtistMedia.kt  MediaInfo.kt  PlayMediaInfo.kt
UnrealMedia/app/src/main/java/com/qfleng/um/database/: AppDb.kt  AppDbHelper.kt  DbConst.kt
UnrealMedia/app/src/main/java/com/qfleng/um/database/dao/: MusicInfoDao.kt  StringKeyDataDao.kt
UnrealMedia/app/src/main/java/com/qfleng/um/database/entity/: MusicInfo.kt  StringKeyData.kt
UnrealMedia/app/src/main/java/com/qfleng/um/fragment/: ArtistSortFragment.kt  AudioControlFragment.kt  BaseFragment.kt  MainFragment.kt
UnrealMedia/app/src/main/java/com/qfleng/um/transitions/: DetailsTransition.kt
UnrealMedia/app/src/main/java/com/qfleng/um/util/: BitmapHelper.kt  Extension.kt  FrescoHelper.kt  MusicUtils.kt  NumConvert.kt  OkHttpReq.kt  RawImageLoader.kt  ThemeHelper.kt
UnrealMedia/app/src/main/java/com/qfleng/um/util/coroutines/: Ext.kt
UnrealMedia/app/src/main/java/com/qfleng/um/view/: Bezier2.kt  RecordView.kt  RecyclerListView.kt  SquareImageView.kt  UriImageView.kt  VectorView.kt
UnrealMedia/app/src/main/java/com/qfleng/um/viewmodel/: AudioPlayerViewModel.kt  MainViewModel.kt
UnrealMedia/app/src/main/res/animator/: star_anim.xml
UnrealMedia/app/src/main/res/drawable/: divider_line.xml  ic_baseline_favorite_24.xml  ic_cross.xml  ic_pause_white_24dp.xml  ic_play_white_24dp.xml  ic_play_white_36.xml  seekbar_progress_drawable.xml  vector_drawable_anim_loading.xml  vector_drawable_play.xml  vector_drawable_play_pause.xml  vector_drawable_play_start.xml  vector_drawable_play_stop.xml  vector_drawable_skip_to_next.xml  vector_drawable_skip_to_previous.xml  vector_drawable_stop.xml
UnrealMedia/app/src/main/res/layout/: activity_about.xml  activity_artist_detail.xml  activity_main.xml  activity_media_info.xml  activity_plugins_info.xml  activity_setting.xml  audio_player_layout.xml  empty_view.xml  fragment_music_recyclerview.xml  list_grid_layout_item.xml  list_item_media_info_view.xml  view_player_control.xml
UnrealMedia/app/src/main/res/menu/: drawer_view.xml  main_menu.xml  popup_menu_artist.xml  popup_menu_music.xml
UnrealMedia/app/src/main/res/navigation/: nav_audio_player.xml
UnrealMedia/app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
UnrealMedia/app/src/main/res/xml/: network_security_config.xml
UnrealMedia/app/src/test/java/com/qfleng/um/: ExampleUnitTest.kt
(+15 files in other folders)
